#
# CMakeLists.txt
#
# Copyright (C) 2015, Achim Lösch <achim.loesch@upb.de>, Christoph Knorr <cknorr@mail.uni-paderborn.de>
# All rights reserved.
#
# This software may be modified and distributed under the terms
# of the BSD license. See the LICENSE file for details.
#
# encoding: UTF-8
# tab size: 4
#
# author: Achim Lösch (achim.loesch@upb.de)
# created: 7/28/14
# version: 0.5.7 - add automatic detection of ipmi device to measure driver
#

add_subdirectory(ipmiwrapper)
#add_subdirectory(taskwrapper)
#add_subdirectory(hetschedwrapper)
#add_subdirectory(hetnodewrapper)
#add_subdirectory(unixsockethandler)
#add_subdirectory(ushmsmonitor)
